--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,4 +1,9 @@
 <% form_tag("/bookmarks/new", :method => :get) do %>
   <%= text_field_tag 'bookmark[url]', 'http://www.google.com/kk', :size => 80 %>
-<%= submit_tag "Add" %>
+  <%= submit_tag "Add" %>
 <% end -%>
+<%= observe_field "bookmark_url", :url => search_bookmarks_path, :with => "q", :frequency => 0.25, :update => "suggestions-list" %>
+
+<div id="suggestions-list">
+
+</div>
