Basic tagging functionality.

--- a/app/views/bookmarks/_bookmark.erb
+++ b/app/views/bookmarks/_bookmark.erb
@@ -1,1 +1,1 @@
-<p><%=link_to bookmark.url, bookmark_path(bookmark) %></p>
+<p><%=link_to bookmark.url, bookmark_path(bookmark) %> <%=tag_list bookmark.tag_list %></p>
