--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -5,6 +5,7 @@
   <% form.inputs :name => "Basic" do %>
     <%= form.input :url %>
     <%= form.input :title, :as => :string %>
+    <%= form.input :tag_list, :as => :string %>
     <%= form.submit 'Save' %>
   <% end %>
 <% end %>
