--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,9 +1,4 @@
-<h1>Bookmark#edit</h1>
 <%= error_messages_for 'bookmark' %>
 <% semantic_form_for @bookmark do |form| %>
-  <% form.inputs :name => "Basic" do %>
-    <%= form.input :url %>
-    <%= form.input :title, :as => :string %>
-    <%= form.submit 'Save' %>
-  <% end %>
+  <%=render :partial => 'form', :locals => {:form => form}%>
 <% end %>
