--- a/app/views/layouts/layout.html.erb
+++ b/app/views/layouts/layout.html.erb
@@ -7,7 +7,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <%=  javascript_include_tag 'prototype' %>
 
-    <%= stylesheet_link_tag "default" %>
     <%= stylesheet_link_tag "formtastic" %>
     <%= stylesheet_link_tag "formtastic_changes" %>
     <%= stylesheet_link_tag "style" %>
@@ -29,7 +28,7 @@
       </div>
       <div id="footer">
         <a>About us</a> |
-        <a>Contact information</a>
+        <a>Contact</a>
       </div>
     </div>
   </body>
