--- a/app/views/taggings/show.html.erb
+++ b/app/views/taggings/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Taggings#show</h1>
+<h2>Bookmarks tagged <%=@tag%></h2>
 <%=render :partial => 'bookmarks/bookmark', :collection => @bookmarks %>
