--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,3 +1,3 @@
-<p>Bookmarks for <%=  @site.domain %></p>
+<h2>Bookmarks for <%=  @site.domain %></h2>
 
 <%= render :partial => 'bookmarks/bookmark', :collection => @site.bookmarks %>
